--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,9 @@
         app:menu="@menu/activity_main_drawer" />
 
     <Button
-        android:id="@+id/signOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="600dp"
-        android:layout_marginLeft="30dp"
-        android:text="SIGN OUT" />
-
+        android:text="Sign Out"
+        android:id="@+id/signOut"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
